--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -1,26 +1,32 @@
-name: Docker Build
+name: Docker Build and Publish
+
 on:
   push:
-    branches:
-      - master-owner
-  workflow_dispatch:
+    branches: ["main"] # 触发工作流的分支
+  pull_request:
+    branches: ["main"]
+
+env:
+  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+  DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
 jobs:
-  docker-build:
-    name: Docker Build
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Build Docker Image
-        run: |
-          docker build -t zzcgwu/gh-proxy:${{ github.sha }} .
-          docker tag zzcgwu/gh-proxy:${{ github.sha }} zzcgwu/gh-proxy:latest
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v1
         with:
-          username: zzcgwu
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-      - name: Push Docker Image
-        run: |
-          docker push zzcgwu/gh-proxy:${{ github.sha }}
-          docker push zzcgwu/gh-proxy:latest
+          username: ${{ env.DOCKER_HUB_USERNAME }}
+          password: ${{ env.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ env.DOCKER_HUB_USERNAME }}/gh-proxy:latest
